Added typed.js functionality

--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ h2 {
 a.logo:hover {
     color: #F87060;
     transition: .3s;
+    text-decoration: underline;
 }
 
 .logo {
@@ -58,6 +59,7 @@ a.logo:hover {
 
 .navbar a:hover {
     color: #F87060;
+    text-decoration: underline;
 }
 
 .home {
@@ -113,11 +115,11 @@ a.logo:hover {
     border-radius: 50%;
     height: 100%;
     width: 100%;
-    border: 15px ridge #DC493A;
+    border: 10px ridge #DC493A;
 }
 
 .home-content span {
-    color: #FFC107;
+    color: #DC493A;
 }
 
 .home-content h3 {
@@ -165,8 +167,9 @@ footer {
 }
 
 .about img {
-    border-radius: 50%;
-    border: 15px ridge #DC493A;
+    border-radius: 20px;
+    max-width: 500px;
+    max-height: 500px;
 }
 
 .skills {
@@ -184,6 +187,8 @@ footer {
     flex-direction: column;
     width: 50%;
     gap: 20px;
+    animation: slideTop .5s ease forwards;
+
 }
 
 .soft-skills {
@@ -192,6 +197,7 @@ footer {
     align-items: center;
     width: 50%;
     gap: 20px;
+    animation: slideTop .5s ease forwards;
 }
 
 .skill {
@@ -200,6 +206,15 @@ footer {
     align-items: center;
     gap: 10px;
 }
+
+.projects {
+    background-color: #ECE8EF;
+    padding: 10vh 10%;
+    display: flex;
+    justify-content: center;
+}
+
+
 
 @keyframes slideRight {
     0% {
