--- a/style.css
+++ b/style.css
@@ -97,6 +97,18 @@ a.logo:hover {
         height: auto !important;
     }
 
+    h1 {
+        font-size: 40px !important;
+    }
+
+    .typed {
+        font-size: 30px !important;
+    }
+
+    .home p {
+        font-size: 25px !important;
+    }
+
     .home-content img{ 
         display: none;
     }
@@ -116,6 +128,18 @@ a.logo:hover {
     p.desktop-only {
         display: none;
     }
+
+    .btn-box {
+        text-align: center !important;
+    }
+
+    .btn-box p {
+        font-size: 15px !important;
+    }
+
+    h2 {
+        font-size: 30px !important;
+    }
 }
 
 .home {
@@ -124,10 +148,10 @@ a.logo:hover {
     justify-content: space-between;
     display: flex;
     align-items: center;
-    padding: 15% 10% 20% 10%;
+    padding: 10% 10% 10% 10%;
     background-color: #ECE8EF;
     color: #000000;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 /* RESPONSIVE NEEDED */
