--- a/style.css
+++ b/style.css
@@ -533,6 +533,7 @@ form input, textarea {
     margin: 2% 5%;
     border-radius: 5px;
     font-weight: 700;
+    resize: none;
 }
 
 /* ---------------------Footer ---------------- */
